# sdk-rust

./: CHANGELOG.md  Cargo.toml  justfile  wkg.toml
examples/axum/: Cargo.toml  plugin.toml
examples/axum/src/: lib.rs
examples/configuration/: Cargo.toml  plugin.toml
examples/configuration/src/: lib.rs
examples/data-folder/: Cargo.toml  plugin.toml
examples/data-folder/data/: file.txt
examples/data-folder/src/: lib.rs
examples/fibonacci/: Cargo.toml  plugin.toml
examples/fibonacci/src/: lib.rs
examples/hello/: Cargo.toml  plugin.toml
examples/hello/src/: lib.rs
examples/http-request/: Cargo.toml  plugin.toml
examples/http-request/src/: lib.rs
examples/postgres/: Cargo.toml  plugin.toml
examples/postgres/src/: lib.rs
examples/redis/: Cargo.toml  plugin.toml
examples/redis/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: bindings.rs  http.rs  lib.rs
src/http/: body.rs  client.rs  headers.rs  method.rs  request.rs  response.rs
wit/: world.wit
