[workspace]
members = ["macros"]

[workspace.package]
version = "2.1.1"
edition = "2024"

[workspace.dependencies]
syn = "2.0"
quote = "1.0"
thiserror = "2.0.18"
http = "1.4.0"
wasip2 = "1.0.3"
wit-bindgen = "0.52.0"

[package]
name = "wassel-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
wassel-sdk-macros.path = "macros"

http.workspace = true
thiserror.workspace = true
wasip2.workspace = true
wit-bindgen.workspace = true
